--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <hr />
     <h1>
-      <a href="../4.3 HTML Porfolio Project/public/movie-ranking.html"
+      <a href="./public/movie-ranking.html"
         >movie ranking project</a
       >
     </h1>
