--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </h1>
 
     <img
-      src="./assets/images/bestmovies.png"
+      src="./assets/images/myfav.png"
       alt="my best movie ranking"
     />
     <h1>
